deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: brain-task-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: brain-task-app

  template:
    metadata:
      labels:
        app: brain-task-app

    spec:
      containers:
        - name: brain-task-app
          image: 526644151944.dkr.ecr.ap-south-1.amazonaws.com/brain-task-app:latest
          ports:
            - containerPort: 80
