service.yaml
apiVersion: v1
kind: Service

metadata:
  name: brain-task-service

spec:
  selector:
    app: brain-task-app

  type: LoadBalancer

  ports:
  - port: 80
    targetPort: 80
